# MUDdown

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  package-lock.json  package.json
.claude/skills/desktop-app/: SKILL.md
.claude/skills/oauth-provider/: SKILL.md
.claude/skills/persistence/: SKILL.md
.claude/skills/privacy/: SKILL.md
.github/: dependabot.yml
.github/skills/desktop-app/: SKILL.md
.github/skills/oauth-provider/: SKILL.md
.github/skills/persistence/: SKILL.md
.github/skills/privacy/: SKILL.md
.github/skills/testing/: SKILL.md
.github/workflows/: ci.yml  desktop-build.yml
apps/desktop/: UPDATER_KEYS.md  package.json  vite.config.ts
apps/desktop/src/: index.html  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/tests/: verify-signature.sh
apps/website/public/: site.webmanifest
apps/website/src/layouts/: Base.astro
apps/website/src/pages/: features.astro  games.astro  index.astro  licenses.astro  login.astro  play.astro  spec.astro
apps/website/src/styles/: global.css
deploy/: muddown-server.service  setup.sh
deploy/nginx/: muddown-proxy.conf  muddown.conf  security-headers.conf
